--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         setSource: function setSource(srcObj, next) {
           next(null, srcObj);
         },
-        // +++ Alter the setCurrentTime function +++
+        // +++ Alter the setCurrentTime method +++
         setCurrentTime: function setCurrentTime(ct) {
           // Check if the time scrubbed to is less than the current time
           if ( ct < player.currentTime() ) {
