--- a/function-in-separate-file/index-separate-file.html
+++ b/function-in-separate-file/index-separate-file.html
@@ -16,7 +16,7 @@
 <body>
 
   <video id="myPlayerID"
-    data-video-id="5686632029001"
+    data-video-id="5701202551001"
     data-account="1752604059001"
     data-player="default"
     data-embed="default"
@@ -28,7 +28,7 @@
   <script src="disable-forward-scrubbing.js"></script>
 
   <script type="text/javascript">
-    videojs.use('*', disableForwardScrubbbing);
+    videojs.use('*', disableForwardScrubbing);
   </script>
 
 </body>
